feat: update spotify downloader
